# SocketIO

./: .gitmodules  BuildForCpp.bat  BuildForCpp.sh  BuildForPython.bat  BuildForPython.sh  BuildForPythonStatic.bat  CMakeListsCpp.txt  CMakeListsPython.txt  CMakeListsPythonStatic.txt  MergeStaticLibs.depends.c.in  MyMacro.cmake  README.md
Cpp/ARM_Sample/: CMakeLists.txt
Cpp/ARM_Sample/src/: SampleClient.cpp  SampleClient.h  SocketIOTest.cpp
Cpp/Sample/: CMakeLists.txt
Cpp/Sample/src/: SampleClient.cpp  SampleClient.h  SocketIOTest.cpp
Nodejs/: Server.js  client.js  clientPage.html
Prebuilt/Windows/Python/: sioclient.py  sioclientCpp.pyd  sioclient_tls.py
Prebuilt/Windows/Win32/Cpp/include/: Object.h
Python/: socketClient.py  socketServer.py
Python/Sample/: GameServer.py  SampleClient.py  SampleServer.py
Python/Sample/static/javascripts/: client.js
Python/Sample/templates/: index.html
SampleApps/Game/: GameServer.py  Readme.txt  sioclient.py
SampleApps/Phenox/: DataMaker.h  Readme.txt  main.cpp
SampleApps/Phenox/src/: DataMaker.h  Parser.h  SioClientWrapper.cpp  SioClientWrapper.h
src/Cpp/: JSON.cpp  JSON.h  Object.cpp  Object.h
src/Python/: ScopedGILRelease.cpp  ScopedGILRelease.h  clientW.cpp  clientW.h  messageW.cpp  messageW.h  sioclientCpp.cpp  socketW.cpp  socketW.h
